Stage Drive/Website/justbitteam-stagedriving_web-13ee93e41663/.kube/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ofs-staging-web
  name: ofs-staging-web
spec:
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 80
      protocol: TCP
  # Label keys and values that must match in order to receive traffic for this service
  selector:
    name: ofs-staging-web
