Stage Drive/Website/justbitteam-stagedriving_web-13ee93e41663/.kube/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: ofs-staging-web
spec:
  tls:
  - hosts:
    - ofs.justbit.it
    secretName: ofs-secret
  rules:
  - host: ofs.justbit.it
    http:
      paths:
      - path: /
        backend:
          serviceName: ofs-staging-web
          servicePort: 80
